# mini

./: .gitignore  COPYING  README  configure.ac
src/: Makefile  Makefile.am  ini_file.c  ini_file.h  main.c  mini-file.c  mini-file.h  mini-parser.c  mini-parser.h  mini-readline.c  mini-readline.h  mini-strip.c  mini-strip.h  mini.c  mini.h  mini_file.c  mini_file.h  parser.c  parser.h  readline.c  readline.h  strip.c  strip.h
tests/: Makefile.am  check-main.c  check-mini-file.c  check-mini-file.h  check-mini-readline.c  check-mini-readline.h  check-mini-strip.c  check-mini-strip.h
tests/resources/: three-line-file.txt
