AC_PREREQ([2.64])
AC_INIT([mini], [0.1], [http://github.com/franchukelly/mini/issues], [mini],
        [http://github.com/franchukelly/mini])
AM_INIT_AUTOMAKE([1.11.1 foreign])

LT_PREREQ([2.2.6])
LT_INIT([dlopen win32-dll disable-static])

AM_SILENT_RULES([yes])

AC_PROG_CC
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

